manifests/grafana-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  namespace: jb-thesis-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
        volumeMounts:
          - mountPath: /var/lib/grafana
            name: grafana-storage
          - mountPath: /etc/grafana/provisioning/datasources
            name: grafana-datasources
            readOnly: false
      volumes:
        - name: grafana-storage
          emptyDir: {}
        - name: grafana-datasources
          configMap:
              defaultMode: 420
              name: grafana-config
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: backend-for-frontend
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '3000'
spec:
  selector: 
    app: grafana
  type: ClusterIP  
  ports:
    - port: 80
      targetPort: 3000
