manifests/identityserver-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver-deployment
  namespace: jb-thesis-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identityserver
  template:
    metadata:
      labels:
        app: identityserver
    spec:
      containers:
      - name: identityserver
        image: studentenk8sregistry.azurecr.io/jb-thesis-identityserver:v1.0
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 64Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: identityserver
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: identityserver
