manifests/ml.proxy-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-proxy-deployment
  namespace: jb-thesis-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-proxy
  template:
    metadata:
      labels:
        app: ml-proxy
    spec:
      containers:
      - name: ml-proxy
        image: studentenk8sregistry.azurecr.io/jb-thesis-ml.proxy:v2.4
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 64Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ml-proxy
  namespace: jb-thesis-project
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: ml-proxy
